# paroles

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  events.rs  lyrics.rs  main.rs  providers.rs  response.rs  song.rs  track.rs  utils.rs
src/playback/: loop_status.rs  mod.rs  status.rs  type.rs
src/player/: finder.rs  iter.rs  mod.rs  player.rs
src/providers/: genius.rs  lrclib.rs  macros.rs  mod.rs  musixmatch.rs  providers.rs  response.rs
src/song/: mod.rs  song.rs
